# api-integrated-llm-experiment

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
api_integrated_llm/: evaluation.py  metrics_aggregator.py  scoring.py
api_integrated_llm/data_models/: auxiliary_models.py  cli_models.py  common_models.py  core_data_models.py  metrics_models.py  scorer_models.py  source_models.py
api_integrated_llm/helpers/: benchmark_helper.py  cli_helper.py  file_helper.py  instruct_data_prep.py  local_llm_helper.py  metrics_aggregator_helper.py  metrics_helper.py  output_parsers.py  sampling_helper.py  scorer_helper.py  scoring_helper_rest.py  service_helper.py  tokenizer_helper.py  utils.py
api_integrated_llm/helpers/database_helper/: local_llm_helper.py  run_example.py  win_rate_calculator.py
api_integrated_llm/helpers/database_helper/core_components/: driver_components.py
api_integrated_llm/helpers/database_helper/database_builders/: sql_dataset_builder.py  sql_sequencing_dataset_builder.py  sql_slot_filling_dataset_builder.py
api_integrated_llm/helpers/database_helper/database_loaders/: bird_database_loader.py  database_loader.py  sparc_database_loader.py
api_integrated_llm/helpers/database_helper/metrics_helper/: win_rate_helper.py
api_integrated_llm/helpers/database_helper/tools/: docstring_parsing_utils.py  sequencing_tools.py  slot_filling_sql_tools.py  sql_query_components.py  sql_tools.py
notebooks/: collate_results.ipynb  local_llm.ipynb  plotting_gold_sequence_length.ipynb  plotting_win_rate.ipynb  plotting_win_rate_shortlisting.ipynb  plotting_winrate.ipynb
notebooks/data/: shortlisting_win_rate.json
notebooks/data/completion_rate_bar/: non-ofuscation_Rest.json  non-ofuscation_Sequencing.json  non-ofuscation_Slot-filling.json  obfuscation_Rest.json  obfuscation_Sequencing.json  obfuscation_Slot-filling.json
scripts/agents/: 3_add_source_file_to_traj.py  4_convert_traj_to_jsonl.py  5_scorer_agents_default_exp.sh  6_aggregator_agents_default_exp.sh  7_win_rate_calc.py
scripts/data_gen/: shortlisting_data_gen_agents.py
scripts/direct_llm/: direct_llm_aggr.sh  direct_llm_parser.sh  direct_llm_scorer.sh
source/configurations/: llm_configurations.json  llm_configurations_20250225.json  llm_configurations_local.json  openai.json  ritz.json
source/prompts/: examples_icl.json  examples_icl_mathqa.json  prompts.json
source/prompts/examples/: examples_icl_sequencing.json  examples_icl_slot_filling.json  examples_icl_stack.json
tests/ali_integrated_llm/: test_scorer.py
tests/ali_integrated_llm/helpers/: test_file_helper.py  test_metrics_helper.py  test_output_parsers.py
tests/ali_integrated_llm/helpers/database_helper/: test_win_rate_calculator.py
tests/api_integrated_llm/: test_evaluator.py  test_metrics_aggregator.py  test_scorer.py
tests/api_integrated_llm/helpers/: test_file_helper.py  test_local_llm_helper.py  test_metrics_aggregator_helper.py  test_metrics_helper.py  test_output_parsers.py  test_prompts_helper.py
tests/data/source/auxiliary/: ignore.json
tests/data/source/evaluation/: orchestra_nestful_format_cosql.json  (+2 more)
(+27 files in other folders)
