[build-system]
requires      = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name            = "api-integrated-llm"
description     = "API Integrated LLM"
requires-python = ">=3.10"
# license         = { file = "LICENSE.txt" }
keywords = ["api", "llm"]
authors  = []
# "datasets==2.12.0", "deepspeed==0.9.2", "accelerate==0.19.0", "evaluate==0.4.0", "ninja", "ipython", "rouge-score", "py7zr", "tensorboard", "openai", "black", "jsonlines", "rouge", "ipdb",  "pytesseract", "nltk",
dependencies = ["transformers==4.49.0", "scikit-learn", "pydantic"]
dynamic      = ["version"]
readme       = { file = "README.md", content-type = "text/markdown" }

[project.scripts]
api-integrated-llm = "api_integrated_llm.helpers.cli_helper:cli"

[project.optional-dependencies]
test = ["pytest", "pre-commit"]

[project.urls]
homepage   = "https://github.ibm.com/Jungkoo-Kang/api_integrated_llm_experiment"
repository = "https://github.ibm.com/Jungkoo-Kang/api_integrated_llm_experiment"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api_integrated_llm*"]

# [tool.setuptools.package-data]
# "data" = ["*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
write_to       = "api_integrated_llm/__version__.py"

# [tool.black]
# line-length = 79
# include = '\.pyi?$'
# exclude = '''
# /(
#     \.git
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | _build
#   | build
#   | dist
# )/
# '''

# [tool.isort]
# line_length                    = 79
# multi_line_output              = 3
# include_trailing_comma         = true
# force_grid_wrap                = 0
# use_parentheses                = true
# ensure_newline_before_comments = true

# [tool.pytest.ini_options]
# addopts      = ["--verbose", "-Werror::FutureWarning"]
# testpaths    = "tests"
# python_files = "*.py"
