[build-system]
requires      = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name            = "api-integrated-llm"
description     = "API Integrated LLM"
requires-python = ">=3.10"
license         = { file = "LICENSE.txt" }
keywords        = ["api", "llm"]
authors         = []
dependencies    = ["transformers==4.49.0", "pydantic >= 2.10", "pandas", "jinja2", "aiohttp", "sqlglot", "statistics", "torch", "accelerate", "sentencepiece", "google-api-python-client"]
dynamic         = ["version"]
readme          = { file = "README.md", content-type = "text/markdown" }

[project.scripts]
api-integrated-llm = "api_integrated_llm.helpers.cli_helper:cli"

[project.optional-dependencies]
test = ["pytest", "pre-commit"]
plot = ["matplotlib"]

[project.urls]
homepage   = "https://github.ibm.com/Jungkoo-Kang/api_integrated_llm_experiment"
repository = "https://github.ibm.com/Jungkoo-Kang/api_integrated_llm_experiment"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api_integrated_llm*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
write_to       = "api_integrated_llm/__version__.py"
